<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>motoros2_fjt_pt_queue_proxy</name>
  <version>0.1.0</version>
  <description>Drip-feed FJT goals to MotoROS2 one traj pt at a time</description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <license>Apache-2.0</license>

  <author>G.A. vd. Hoorn</author>

  <exec_depend>control_msgs</exec_depend>
  <!-- <exec_depend>industrial_msgs</exec_depend> -->
  <exec_depend>motoros2_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend version_gte="0.2.2">simple_actions</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
